--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -6,7 +6,7 @@
   <body>
     <h1>Login Page</h1>
 
-    <form method="POST" action="/user/login">
+    <form method="POST" action="/api/users/login">
       <input type="email" name="email" placeholder="Email" />
       <input type="password" name="password" placeholder="Password" />
       <button type="submit">Login</button>
