--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -7,7 +7,7 @@
   <body>
     <h1>Register</h1>
 
-    <form method="POST" action="/user/register">
+    <form method="POST" action="/api/users/register">
       <div>
         <label>Email</label>
         <input 
