--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -30,5 +30,11 @@
 
       <button type="submit">Register</button>
     </form>
+     <script>
+    // Clear form on page load
+    window.onload = function() {
+      document.querySelector('form').reset();
+    };
+  </script>
   </body>
 </html>
