--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,10 +7,16 @@
     <h1>Login Page</h1>
 
     <form method="POST" action="/api/users/login">
-      <input type="email" name="email" placeholder="Email" />
-      <input type="password" name="password" placeholder="Password" />
+      <input type="email" name="email" placeholder="Email" required />
+      <input type="password" name="password" placeholder="Password" required/>
       <button type="submit">Login</button>
     </form>
-  
+     <p>Don't have an account? <a href="/register">Register here</a></p>
+     <script>
+    // Clear form on page load
+    window.onload = function() {
+      document.querySelector('form').reset();
+    };
+  </script>
   </body>
 </html>
